examples/error/jv2898_err1.jle
# This is a program to find the slope of a line
# By: Jacob, Tryton, and Sammy

display "This program finds the slope of a line.";
display "Enter the y, x, and b: ";
input y, x, b;

m := (y - b) / x
# The semi-colon is missing in the line above.

display "The slope is: ", m;
